--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Details.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Details.cshtml
@@ -4,23 +4,23 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <h1>Подробности</h1>
 
 <div>
-    <h4>EmplEducationalUnit</h4>
+    <h4>Сотрудник в подразделении</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee)
+            @Html.DisplayNameFor(model => model.Employee.FullName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Id)
+            @Html.DisplayFor(model => model.Employee.FullName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EducationalUnit)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EducationalUnit.Id)
+            @Html.DisplayFor(model => model.EducationalUnit.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.WorkStartDate)
@@ -38,11 +38,11 @@
             @Html.DisplayNameFor(model => model.Faculty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Faculty.Id)
+            @Html.DisplayFor(model => model.Faculty.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a> |
+    <a asp-action="Index">Назад</a>
 </div>
