--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Edit.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+    <h1>Редактирование</h1>
 
-<h4>EmplEducationalUnit</h4>
+    <h4>Сотрудник в подразделении</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,13 +39,13 @@
                 <span asp-validation-for="FacultyId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Сотрудник и занимаемя должность" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
