--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Добавление</h1>
 
-<h4>EmplPosHistory</h4>
+<h4>Сотрудник и занимаемая должность</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,13 +35,13 @@
                 <select asp-for="FacultyId" class ="form-control" asp-items="ViewBag.FacultyId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
