--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Index.cshtml
@@ -4,28 +4,28 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <h1>Сотрудники и их занимаемые должности</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Employee)
+                @Html.DisplayNameFor(model => model.Employee.FullName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Position)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Faculty.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.WorkStartDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.WorkEndDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Faculty)
             </th>
             <th></th>
         </tr>
@@ -34,10 +34,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Employee.Id)
+                @Html.DisplayFor(modelItem => item.Employee.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Position.Id)
+                @Html.DisplayFor(modelItem => item.Position.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Faculty.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WorkStartDate)
@@ -46,12 +49,9 @@
                 @Html.DisplayFor(modelItem => item.WorkEndDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Faculty.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
