--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удаление</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>Faculty</h4>
+    <h4>Факультет</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,13 +27,13 @@
             @Html.DisplayNameFor(model => model.EduInstitution)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EduInstitution.Address)
+            @Html.DisplayFor(model => model.EduInstitution.Name)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад</a>
     </form>
 </div>
