--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Details.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Подробности</h1>
 
 <div>
-    <h4>Faculty</h4>
+    <h4>Факультет</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,11 +26,11 @@
             @Html.DisplayNameFor(model => model.EduInstitution)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EduInstitution.Address)
+            @Html.DisplayFor(model => model.EduInstitution.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a> |
+    <a asp-action="Index">Назад</a>
 </div>
