--- a/AisMKIT/Areas/EduInstitutions/Views/FacultySpecialties/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/FacultySpecialties/Delete.cshtml
@@ -4,30 +4,30 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удаление</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить это?</h3>
 <div>
-    <h4>FacultySpecialty</h4>
+    <h4>Специальность в факультете</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Specialty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Specialty.Id)
+            @Html.DisplayFor(model => model.Specialty.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Faculty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Faculty.Id)
+            @Html.DisplayFor(model => model.Faculty.Name)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">Назад</a>
     </form>
 </div>
