--- a/AisMKIT/Areas/EduInstitutions/Views/FacultySpecialties/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/FacultySpecialties/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <h1>Специальности в факультетах</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
@@ -25,15 +25,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Specialty.Id)
+                @Html.DisplayFor(modelItem => item.Specialty.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Faculty.Id)
+                @Html.DisplayFor(modelItem => item.Faculty.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
