--- a/AisMKIT/Areas/EduInstitutions/Views/Specialties/Edit.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Specialties/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Редактирование</h1>
 
-<h4>Specialty</h4>
+<h4>Специальность</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,13 +24,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
